--- a/goods.css
+++ b/goods.css
@@ -239,7 +239,7 @@ a, a:hover {
 }
 
 a:-webkit-any-link {
-    color: -webkit-link;
+    /* color: -webkit-link; */
     cursor: pointer;
 }
 
@@ -772,7 +772,8 @@ img {
 }
 
 .summary-title-section {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    margin-bottom: 0px;
     font-size: 16px;
 }
 
@@ -835,7 +836,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0;
     word-break: break-word;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 24px !important;
     line-height: 29px;
     display: flex;
     align-items: center;
@@ -905,6 +906,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
+    color:#121212; 
 }
 
 .middle-body-text-date {
@@ -1158,7 +1160,174 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .button-strong {
+    padding-block: 1px;
+    padding-inline: 6px;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    letter-spacing: normal;
+    word-spacing: normal;
+    font-optical-sizing: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    font-stretch: ;
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    margin: 0;
+    font-family: inherit;
+    overflow: visible;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    background: none;
+    -webkit-appearance: button;
+    text-decoration: none;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 24px;
+    position: relative;
+    display: inline-block;
+    padding: 5px 15px;
+    font-weight: 400;
+    background-color: rgba(0,0,0,1);
+    color: rgba(255,255,255,1)!important;
+    cursor: pointer;
+    width: 100%;
+    height: 44px;
+    border: 1px solid;
+}
+
+.sale-infomation {
+    padding: 20px 0;
+    border-bottom: 1px solid rgba(0,0,0,.05);
+    max-width: 700px;
+    margin: 40px auto 0 auto;
+    border-top: 1px solid rgba(0,0,0,.05);
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: -.13px;
+    color: #909090;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 7px 20px;
+}
+
+.sale-info-period {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: -.13px;
+    color: #909090;
+}
+
+.sale-open {
+    line-height: 21px;
+    letter-spacing: -.13px;
+    color: #909090;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.sale-open-date{
+    font-weight: 400;
+    color: #000;
+    margin-left: 16px;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: -.13px;
+}
+
+.sale-close {
+    font-size: 15px;
+    margin-top: 0.25rem!important;
+    box-sizing: border-box;
+    line-height: 21px;
+    letter-spacing: -.13px;
+    color: #909090;
+    font-weight: 500;
+}
+
+.sale-close-date {
+    font-weight: 400;
+    color: #000;
+    margin-left: 16px;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: -.13px;
+}
+
+.goods-details{
+    max-width: 740px;
+    margin: auto;
+    padding-top: 60px;
+    padding: 40px 20px 0;
+    color: #121212;
+    user-select: none;
+}
+
+.post-info {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: -.16px;
+    color: #000;
+    margin-bottom: 16px;
+    padding: 0;
+    margin: 0;
+    user-select: none;
+}
+
+.post-body {
+    color: #121212;
+}
+
+.post-body-content {
     font-size: 16px;
-    padding-top: 20px;
+    line-height: 1.75;
+    font-weight: 400;
+    word-break: break-word;
+    visibility: visible!important;
+    text-align: left!important;
+    color: #121212;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.p1 {
+    text-align: left!important;
+    word-break: break-word;
+    line-height: 1.75;
+    font-size: 16px;
+    margin-bottom: 1em;
+    min-height: 1.7em;
+    margin-top: 0!important;
+    font-family: "Pretendard","Apple SD Gothic Neo","Malgun Gothic",sans-serif;
+}
+
+.image-list {
+    text-align: center;
+    line-height: 0;
+    font-size: 16px;
+    font-weight: 400;
+    word-break: break-word;
+    visibility: visible!important;
     color: #121212;
 }
