--- a/main_page.css
+++ b/main_page.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
 
@@ -126,14 +126,8 @@ header.main-page-header {
      min-width: 320px;
      max-width: 100vw;
      background-color: #fff;
-     -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
-     transition: -webkit-transform .25s ease;
-     transition: transform .25s ease;
      transition: transform .25s ease,-webkit-transform .25s ease;
-     -webkit-backface-visibility: hidden;
-     backface-visibility: hidden;
-
 }
 
 header.main-page-header nav.main-page-nav {  
@@ -373,7 +367,6 @@ span.main-page-span{
      cursor: pointer;
      transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
      color: #000;
-     background-color: #fff;
      display: inline-flex;
      align-items: center;
      justify-content: center;
@@ -387,16 +380,23 @@ span.main-page-span{
     white-space: nowrap;
     vertical-align: middle;
     user-select: none;
+    background-color: #fff;
+}
+
+.main-page-a3:hover{
+     color: #3478ff;
+     background-color: #fff;
 }
 
 .main-page-a4{
+
      border: none;
      padding: 5px 11px;
      margin-left: 8px;
      margin-right: 6px;
      cursor: pointer;
      transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
-     color: #fff;
+
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -411,6 +411,13 @@ span.main-page-span{
     vertical-align: middle;
     user-select: none;
     background-color: #3478ff;
+    color: #fff;
+
+}
+
+.main-page-a4:hover{
+     color: #fff;
+     background-color: #1e50ff;
 
 }
 
@@ -485,19 +492,8 @@ span.main-page-span{
 }
 
 .main-page-i1::before{
-     position: absolute;
-     top: 50%;
-     z-index: 1;
-     -webkit-transform: translate(0,-50%);
-     transform: translate(0,-50%);
-     left: 8px;
-     width: 32px;
-     height: 32px;
-     font-size: 14px;
-     padding: 3px;
-     line-height: 28px;
-     text-align: center;
-     color: #909090;
+     content: "\f002";
+
 }
 
 .main-page-input{
@@ -514,11 +510,14 @@ span.main-page-span{
      line-height: 26px;
      color: inherit;
      transition: border-color .15s ease-in-out,background-color .15s ease-in-out;
-     border: 1px solid #ced4da;
+     border: 1px solid #f0f0f0;
      outline-offset: -2px;
      -webkit-appearance: none;
      font-family: inherit;
      overflow: visible;
+}
+.main-page-input:focus-visible{
+     outline: none;
 }
 
 .main-page-input::placeholder{
@@ -605,22 +604,24 @@ span.main-page-span{
 
 }
 
+.main-page-nav1 .main-page-div10 {
+     padding: 0;
+}
+
 .main-page-div10{
-     
+     padding-left: 0;
      height: 48px!important;
      display: flex;
      justify-content: center;
      align-items: flex-start;
      overflow: hidden;
      max-width: 1000px;
-     padding: 0;
+     padding-right: 0;
+     position: relative;
      flex-wrap: wrap;
      width: 100%;
      margin-right: auto;
      margin-left: auto;
-     padding-left: 0;
-     padding-right: 0;
-
 }
 
 .main-page-ul{
@@ -711,6 +712,16 @@ span.main-page-span{
      list-style: none;
 }
 
+.main-page-li3::before{
+     content: '';
+     height: 16px;
+     width: 1px;
+     position: absolute;
+     left: -18px;
+     top: 35%;
+     background-color: rgba(0,0,0,.1);
+}
+
 .main-page-a9{
      padding: 12px 2px;
      font-weight: 500!important;
@@ -743,9 +754,9 @@ span.main-page-span{
 
 .main-page-div12{
      width: calc(100% - 48px);
-     max-width: 1000px;
-     overflow-x: hidden;
-     margin: 32px auto 0 auto;
+    max-width: 1000px;
+    overflow-x: hidden;
+    margin: 32px auto 0 auto;
 }
 
 .main-page-div13{
@@ -755,6 +766,7 @@ span.main-page-span{
      color: #000;
      display: flex;
      align-items: center;
+     
 }
 
 .main-page-div14{
@@ -763,9 +775,9 @@ span.main-page-span{
 }
 .main-page-div15{
      display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(calc((100% - 20px) / 2),1fr));
-     column-gap: 20px;
-     row-gap: 20px;
+    grid-template-columns: repeat(auto-fill,minmax(calc((100% - 20px) / 2),1fr));
+    column-gap: 20px;
+    row-gap: 20px;
 
 }
 
@@ -821,6 +833,14 @@ span.main-page-span{
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
 
+}
+
+.main-page-p{
+     font-size: 16px;
+     font-weight: 400;
+     line-height: 135%;
+     color: rgba(0,0,0,.47);
+     margin: 0;
 }
 
 .main-page-div20{
@@ -895,6 +915,18 @@ span.main-page-span{
      vertical-align: middle;
      border-style: none;
 
+}
+
+.main-page-a13::after{
+     content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(0,0,0,.05);
+    border-radius: 8px;
 }
 
 
@@ -993,6 +1025,7 @@ span.main-page-span{
     vertical-align: middle;
     user-select: none;
 }
+
 .main-page-li4{
      font-size: 16px;
      vertical-align: top;
@@ -1006,6 +1039,13 @@ span.main-page-span{
     line-height: 1;
      
 }
+
+.main-page-li4::before{
+     content: "\f02e";
+}
+
+
+
 .main-page-li5{
      font-size: 16px;
     vertical-align: top;
@@ -1062,8 +1102,12 @@ span.main-page-span{
      font-variant: normal;
      text-rendering: auto;
      line-height: 1;
-
 }
+
+.main-page-li6::before{
+     content: "\f141";
+}
+
 .main-page-ul1{
      right: 0;
      left: auto;
@@ -1123,4 +1167,622 @@ span.main-page-span{
     text-rendering: auto;
     line-height: 1;
     font-size: 16px;
+}
+.main-page-div29{
+     text-align: center;
+     margin: 24px 0 24px;
+}
+.main-page-button2{
+     
+    padding: 8px 16px 8px 16px;
+    height: 40px;
+    border: 0;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #141415;
+    
+    cursor: pointer;
+    transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
+    
+    position: relative;
+    background: none;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    font-family: inherit;
+    -webkit-appearance: button;
+    text-transform: none;
+    overflow: visible;
+    background-color: #F5F5F7;
+    justify-content: center;
+    align-items: center;
+
+}
+.main-page-i8{
+     font-size: 12px;
+     margin-right: 8px;
+     font-family: 'Font Awesome 5 Pro';
+     font-weight: 400;
+     -webkit-font-smoothing: antialiased;
+     display: inline-block;
+     font-style: normal;
+     font-variant: normal;
+     text-rendering: auto;
+     line-height: 1;
+}
+.main-page-i8::before{
+     content: "\f021";
+}
+
+
+button, input, optgroup, select, textarea {
+     font-family: inherit;
+ }
+ 
+ button, input, optgroup, select, textarea {
+     margin: 0;
+     font-family: inherit;
+     font-size: inherit;
+     line-height: inherit;
+ }
+ 
+ img {
+     vertical-align: middle;
+     border-style: none;
+ }
+ .main-card-news {
+     width: calc(100% - 48px);
+     max-width: 1000px;
+     overflow-x: hidden;
+     margin: 32px auto 0 auto;
+ }
+ 
+ .main-card-news-subject {
+     font-size: 24px;
+     line-height: 135%;
+     color: #000;
+     flex: none;
+     order: 0;
+     flex-grow: 0;
+     display: flex;
+     align-items: center;
+     font-weight: 600;
+ }
+ 
+ .main-card-news-keyword-list {
+     margin-top: 12px;
+     white-space: nowrap;
+     overflow-x: auto;
+     overflow-y: hidden;
+ }
+ 
+ .main-card-news-keyword {
+     font-size: 16px;
+     line-height: 24px;
+     padding: 8px 16px;
+     height: 40px;
+     display: inline-block;
+     margin-right: 4px;
+     border-radius: 24px;
+     color: #6E6E73;
+     background-color: #F5F5F7;
+ }
+ 
+ .main-card-news-keyword.active {
+     color: #FFF;
+     background-color: #2F2F30;
+ }
+ 
+ .main-card-news-keyword:hover {
+     color: #6E6E73;
+     background-color: #F5F5F7;
+ }
+ 
+ .main-card-news-keyword.active:hover {
+     color: #FFF;
+     background-color: #2F2F30;
+ }
+ 
+ .main-card-news-post-list {
+     margin: 0 -12px;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: flex-start;
+ }
+ 
+ .main-card-news-post {
+     flex-basis: 25%;
+     padding: 0 12px;
+     margin: 24px 0;
+     border: 0;
+     flex-grow: 0;
+     flex-shrink: 0;
+     overflow: hidden;
+ }
+ 
+ .main-card-news-thumbnail {
+     margin-bottom: 12px;
+     position: relative;
+     min-width: 100%;
+     border-radius: 8px;
+ }
+ 
+ .main-card-news-thumbnail a {
+     position: relative;
+     display: block;
+ }
+ 
+ .main-card-news-image-wrapper {
+     position: relative;
+     width: 100%;
+     padding-top: 75%;
+     border-radius: 8px;
+     overflow: hidden;
+ }
+ 
+ .main-card-news-thumbnail a img {
+     position: absolute;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     background-color: #F7F7F7;
+ }
+ 
+ .main-card-news-thumbnail a::after {
+     content: "";
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     width: 100%;
+     height: 100%;
+     border: 1px solid rgba(0,0,0,.05);
+     border-radius: 8px;
+ }
+ 
+ .main-card-news-title {
+     font-size: 16px;
+     line-height: 135%;
+     font-weight: 600;
+     margin-bottom: 6px;
+     color: #000!important;
+     overflow: hidden;
+     text-overflow: ellipsis;
+     display: -webkit-box;
+     -webkit-line-clamp: 2;
+     -webkit-box-orient: vertical;
+     margin-top: 0;
+     font-family: inherit;
+ }
+ 
+ .main-card-news-info {
+     position: relative;
+     height: 16px;
+     font-size: 13px;
+     line-height: 16px;
+     overflow: hidden;
+     white-space: nowrap;
+     display: flex;
+ }
+ 
+ .main-card-news-user {
+     display: inline;
+     max-width: 90px;
+     flex-shrink: 0;
+     overflow: hidden;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+ }
+ 
+ .main-card-news-username {
+     color: #000!important;
+ }
+ 
+ .main-card-news-date {
+     display: inline;
+     color: rgba(0,0,0,.47)!important;
+ }
+ 
+ .main-card-news-time {
+     margin-left: 8px;
+     margin-right: 0;
+ }
+ 
+ .main-card-news-info::after {
+     content: "";
+     position: absolute;
+     top: 0;
+     right: 0;
+     width: 16px;
+     height: 16px;
+     background: linear-gradient(90deg,rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+ }
+ 
+ .main-card-news-tags {
+     display: flex;
+     flex-wrap: wrap;
+     overflow: hidden;
+     height: 22px;
+     margin-top: 10px;
+     line-height: 0;
+     white-space: nowrap;
+ }
+ 
+ .main-card-news-tag {
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 20.3px;
+     padding: 1px 6px;
+     margin-right: 6px;
+     display: inline-block;
+     color: #6E6E73;
+     text-align: center;
+     background: #F5F5F7;
+     border-radius: 24px;
+     transition: background-color .15s ease-in-out;
+ }
+ 
+ .main-card-news-tag:hover {
+     background: rgba(0,0,0,.1);
+ }
+ 
+ .main-card-news-more {
+     margin: 24px 0 24px;
+     margin-top: 8px;
+     text-align: center;
+ }
+ 
+ .main-card-news-more-link {
+     display: inline;
+     align-items: center;
+     padding: 8px 16px 8px 16px;
+     height: 40px;
+     border: 0;
+     border-radius: 8px;
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 24px;
+     text-align: center;
+     color: #141415;
+     background: none;
+     background-color: #F5F5F7;
+     cursor: pointer;
+     transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
+     justify-content: center;
+     position: relative;
+     white-space: nowrap;
+     vertical-align: middle;
+     user-select: none;
+ }
+ 
+ .main-card-news-more-tag {
+     color: #3478FF;
+     margin-right: 5px;
+ }
+
+.main-div1{
+     width: calc(100% - 48px);
+     max-width: 1000px;
+     overflow-x: hidden;
+     margin: 32px auto 0 auto;
+}
+
+.main-div2{
+     font-size: 24px;
+     font-weight: 600;
+     line-height: 135%;
+     color: #000;
+     display: flex;
+     align-items: center;
+}
+
+.main-div3{
+     display: inline-block;
+    margin-left: 6px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    align-items: center;
+    text-align: center;
+    color: #3478FF;
+    padding: 2px 5px;
+    gap: 10px;
+    width: 41px;
+    height: 20px;
+    background: #EBF4FF;
+    border-radius: 10px;
+
+}
+
+.main-div4{
+     overflow: hidden;
+}
+
+.main-div5{
+     display: flex;
+     flex-wrap: wrap;
+     margin: 0 -8px;
+     justify-content: flex-start;
+
+}
+
+.main-div6{
+     flex-basis: 25%;
+     position: relative;
+     width: 100%;
+     word-break: break-all;
+     border: 0;
+     flex-grow: 0;
+     flex-shrink: 0;
+     padding: 0 8px;
+    overflow: hidden;
+}
+
+.main-div7{
+     margin-bottom: 12px;
+     position: relative;
+     min-width: 100%;
+     border-radius: 8px;
+}
+
+.main-div8{
+
+}
+
+.main-img{
+     object-fit: cover;
+     border-radius: 8px;
+     width: 100%;
+
+ }
+
+.main-a::after{
+     content: "";
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     width: 100%;
+     height: 100%;
+     border: 1px solid rgba(0,0,0,.05);
+     border-radius: 8px;
+}
+
+.main-div9{
+     display: block;
+}
+
+.main-a1{
+     font-weight: 600;
+     font-size: 18px;
+     line-height: 130%;
+     color: #000;
+     margin-top: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-break: anywhere;
+}
+
+.main-div10{
+     margin-top: 10px;
+     display: flex;
+     flex: 1;
+     align-items: flex-end;
+     overflow: hidden;
+     margin-top: 6px;
+}
+
+.main-a2{
+     display: block;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    margin-right: 8px;
+}
+
+.main-img2{
+     display: block;
+     width: 24px;
+     height: 24px;
+     border-radius: 50%;
+     background-color: #fff;
+     object-fit: cover;
+}
+
+.main-a2::after{
+     width: 24px;
+     height: 24px;
+     position: absolute;
+     top: 0;
+     left: 0;
+     content: '';
+     border-radius: 50%;
+     border: 1px solid rgba(0,0,0,.05);
+}
+
+.main-div11{
+
+}
+
+.main-div12{
+     font-weight: 500;
+     font-size: 15px;
+     line-height: 24px;
+     color: #000;
+     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+ 
+}
+
+.main-a3{
+
+}
+
+.main-div13{
+     flex-basis: 25%;
+     position: relative;
+     width: 100%;
+     word-break: break-all;
+     border: 0;
+     flex-grow: 0;
+     flex-shrink: 0;
+     margin: 20px 0;
+     padding: 0 8px;
+     overflow: hidden;
+}
+
+.main-div14{
+     margin-bottom: 12px;
+     position: relative;
+     min-width: 100%;
+     border-radius: 8px;
+}
+
+.main-div15{
+     
+     text-align: center;
+    margin: 24px 0 24px;
+    margin-top: 8px;
+}
+
+.main-a4{
+     align-items: center;
+    padding: 8px 16px 8px 16px;
+    height: 40px;
+    border: 0;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #141415;
+    
+    cursor: pointer;
+    transition: color .15s ease-in-out,background .15s ease-in-out,border-color .15s ease-in-out;
+    display: inline-flex;
+    justify-content: center;
+    position: relative;
+    background: none;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    background-color: #F5F5F7;
+}
+
+.main-footer{
+     padding: 24px 0 25px;
+     font-size: 13px;
+     position: relative;
+    z-index: 1;
+    line-height: 20px;
+    text-align: center;
+    color: #909090;
+    border-top: 1px solid rgba(0,0,0,.05);
+    transition: transform .25s ease,-webkit-transform .25s ease;
+    backface-visibility: hidden;
+    display: block;
+}
+
+.main-div100{
+     padding-right: 26px;
+     padding-left: 26px;
+     width: 100%;
+     max-width: 1052px;
+     margin-right: auto;
+     margin-left: auto;
+}
+
+.main-ul{
+     margin: 0;
+     padding-left: 0;
+    list-style: none;
+}
+
+.main-li10{
+     margin-right: 10px;
+     position: relative;
+    line-height: 1.2;
+    display: inline-block;
+}
+
+.main-a20{
+     line-height: 1;
+}
+
+.main-li10::after{
+     content: "";
+     position: absolute;
+     top: calc(50% - 0.45em);
+     right: -7px;
+     width: 0;
+     height: 0.9em;
+     border-right: 1px solid;
+     opacity: .25;
+}
+
+.main-b{
+     font-weight: 700;
+}
+
+.main-li11{
+     margin-right: 0;
+     position: relative;
+     line-height: 1.2;
+     display: inline-block;
+}
+
+.main-a21{
+     line-height: 1;
+}
+
+.main-li12{
+     display: inline-block;
+     margin: 0 0 0 20px;
+     font-size: 13px;
+     font-weight: 400;
+     text-transform: uppercase;
+     position: relative;
+     line-height: 1.2;
+}
+
+.main-address{
+     font-size: 12px;
+     max-width: 640px;
+     margin: 20px auto 0;
+     text-align: center;
+     word-break: keep-all;
+     -webkit-font-smoothing: antialiased;
+     color: #b4b4b4;
+     font-style: normal;
+     line-height: inherit;
+}
+
+.main-span5::after{
+     content: '';
+    display: inline-block;
+    width: 0;
+    height: 12px;
+    margin: 2px 4px 0 8px;
+    vertical-align: text-top;
+    border-left: 1px solid rgba(0,0,0,.15);
+}
+
+.main-span17{
+     font-size: 12px;
+    text-align: center;
+    word-break: keep-all;
+    -webkit-font-smoothing: antialiased;
+    color: #b4b4b4;
 }
